docker-compose/kubernetes-kompose/spark-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-hdfs
  name: spark-hdfs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spark-hdfs
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/mynet: "true"
        io.kompose.service: spark-hdfs
    spec:
      hostname: spark-hdfs
      containers:
      - env:
        - name: SPARK_LOCAL_IP
          value: spark-hdfs
        image: javianton97/spark-master-k8s
        imagePullPolicy: ""
        name: spark-m
        ports:
        - containerPort: 8080
        - containerPort: 7077
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
