docker-compose/kubernetes-kompose/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-master
  name: spark-master
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "7077"
    port: 7077
    targetPort: 7077
  selector:
    io.kompose.service: spark-master
status:
  loadBalancer: {}
